// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeBoolean should return false for {} 1`] = `
Object {
  "message": "    
    expected should be an boolean.
    got: object
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for 1 1`] = `
Object {
  "message": "    
    expected should be an boolean.
    got: number
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for Symbol() 1`] = `
Object {
  "message": "    
    expected should be an boolean.
    got: symbol
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for aa 1`] = `
Object {
  "message": "    
    expected should be an boolean.
    got: string
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for asymmetricMatcher of any value that is not boolean 1`] = `
Object {
  "message": "    
    expected should be an boolean.
    got: any(Number)
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for boolean with isNot true 1`] = `
Object {
  "message": "    
    expected should not be an boolean.
    got: boolean
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for null 1`] = `
Object {
  "message": "    
    expected should be an boolean.
    got: null
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for undefined 1`] = `
Object {
  "message": "    
    expected should be an boolean.
    got: undefined
",
  "pass": false,
}
`;
